[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fms"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres",
    "psycopg[binary]",
    "python-dotenv",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "testcontainers[postgres]>=4.8",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes: неиспользуемые импорты, переменные
    "I",  # isort: порядок импортов
]
ignore = ["E501"]  # длину строки контролирует форматтер

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast tests with no external dependencies",
    "integration: tests that require Docker / real Postgres",
]

